# ai-company-insights

./: .env.example  .gitignore  README.md  pyproject.toml
skills/czech-company-research/: SKILL.md
src/ai_company_insights/: __init__.py  cli.py  config.py  foundry.py  foundry_web_search.py  models.py  report_renderer.py  researcher.py  token_usage.py  utils.py
src/ai_company_insights/clients/: __init__.py  ares.py  crawler.py  documents.py  news.py  search.py  stocks.py
templates/: company_report.md
tests/: test_ares.py  test_report_renderer.py  test_researcher.py  test_stocks.py  test_token_usage.py  test_utils.py
